--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_flow_info.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_flow_info.xml
@@ -194,7 +194,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:padding="10dp"
-                    android:src="@mipmap/business_plan" />
+                    android:src="@mipmap/business_plan"
+                    android:layout_alignParentTop="true" />
             </RelativeLayout>
 
             <EditText
