--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_column_message.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_column_message.xml
@@ -90,16 +90,19 @@
             android:textSize="16sp" />
 
     </RadioGroup>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/text_black"/>
+        android:background="@color/text_black" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
+
         <EditText
             android:id="@+id/task_name"
             android:layout_width="0dp"
@@ -110,23 +113,25 @@
             android:hint="请输入任务名称"
             android:padding="11dp"
             android:textSize="12sp" />
+
         <TextView
             android:id="@+id/search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/community_selector"
             android:layout_marginLeft="15dp"
+            android:background="@drawable/community_selector"
             android:gravity="center"
             android:text="搜索"
             android:textSize="16sp" />
 
     </LinearLayout>
+
     <ListView
         android:id="@+id/listview"
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:background="@color/text_font_color_white"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:background="@color/text_font_color_white">
 
     </ListView>
 
