--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_email.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_email.xml
@@ -234,6 +234,7 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/sent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
