--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_flowevection.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_flowevection.xml
@@ -22,10 +22,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="发送邮件"
+            android:text="出差流程"
             android:textColor="@android:color/white"
             android:textSize="21sp" />
     </RelativeLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@color/text_font_color_white"
+        android:padding="10dp"
+        android:text="出差申请单"
+        android:textColor="@color/text_black"
+        android:textSize="16sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,183 +43,196 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:background="@color/text_font_color_white"
             android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:drawablePadding="15dp"
+                android:gravity="center"
                 android:padding="10dp"
-                android:text="发 件 人："
+                android:text="申请人："
                 android:textColor="@color/text_black"
                 android:textSize="16sp" />
-
-            <EditText
-                android:id="@+id/send_name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/normal_button_bg_selector"
-                android:hint=""
-                android:padding="11dp"
-                android:textSize="12sp" />
-        </LinearLayout>
-
-        <RelativeLayout
-            android:id="@+id/copy_to"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
-            android:background="@color/text_font_color_white">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="抄      送："
-                android:textColor="@color/text_black"
-                android:textSize="16sp" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="10dp"
-                android:padding="10dp"
-                android:src="@mipmap/move_go" />
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
-            android:background="@color/text_font_color_white"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="收 件 人："
-                android:textColor="@color/text_black"
-                android:textSize="16sp" />
-
-            <EditText
-                android:id="@+id/recipients"
+                android:id="@+id/name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/normal_button_bg_selector"
-                android:hint=""
-                android:padding="11dp"
-                android:textSize="12sp" />
+                android:gravity="right"
+                android:padding="8dp"
+                android:text="郑杰"
+                android:textColor="@color/text_black" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:background="@color/text_font_color_white"
             android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:drawablePadding="15dp"
+                android:gravity="center"
                 android:padding="10dp"
-                android:text="主      题："
+                android:text="部    门："
                 android:textColor="@color/text_black"
                 android:textSize="16sp" />
 
-            <EditText
-                android:id="@+id/type"
+            <TextView
+                android:id="@+id/section"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/normal_button_bg_selector"
-                android:hint=""
-                android:padding="11dp"
-                android:textSize="12sp" />
+                android:gravity="right"
+                android:padding="8dp"
+                android:text=""
+                android:textColor="@color/text_black" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="10dp"
             android:background="@color/text_font_color_white"
             android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:drawablePadding="15dp"
+                android:gravity="center"
                 android:padding="10dp"
-                android:text="内      容："
+                android:text="日    期："
                 android:textColor="@color/text_black"
                 android:textSize="16sp" />
 
-            <EditText
-                android:id="@+id/content"
+            <TextView
+                android:id="@+id/data"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:padding="8dp"
+                android:text="郑杰"
+                android:textColor="@color/text_black" />
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawablePadding="15dp"
+            android:padding="10dp"
+            android:text="出差原因："
+            android:textColor="@color/text_black"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/send_name"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/normal_button_bg_selector"
+            android:gravity="left"
+            android:hint="请填写出差原因"
+            android:padding="11dp"
+            android:textSize="12sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawablePadding="15dp"
+            android:padding="10dp"
+            android:text="请假时间："
+            android:textColor="@color/text_black"
+            android:textSize="16sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@color/text_font_color_white"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="15dp"
+                android:text="开始"
+                android:textColor="@color/text_black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/start_date"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/normal_button_bg_selector"
-                android:hint=""
-                android:padding="11dp"
-                android:textSize="12sp" />
+                android:drawableRight="@mipmap/down"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="2017-3-13"
+                android:textColor="@color/text_black"
+                android:textSize="14sp" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="5dp"
             android:background="@color/text_font_color_white"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="附       件:"
+                android:padding="15dp"
+                android:text="结束"
                 android:textColor="@color/text_black"
                 android:textSize="16sp" />
 
-            <ImageView
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/end_date"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/normal_button_bg_selector"
+                android:drawableRight="@mipmap/down"
+                android:gravity="center"
                 android:padding="10dp"
-                android:src="@mipmap/tj" />
+                android:text="2017-3-13"
+                android:textColor="@color/text_black"
+                android:textSize="14sp" />
+
         </LinearLayout>
     </LinearLayout>
 
-    <RelativeLayout
-        android:id="@+id/send"
+    <TextView
+        android:id="@+id/save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/text_font_color_white">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:drawableLeft="@drawable/business_fasong_selector"
-            android:drawablePadding="5dp"
-            android:padding="10dp"
-            android:text="发送邮件"
-            android:textColor="@drawable/business_text_selector"
-            android:textSize="16sp" />
-        <TextView
-            android:id="@+id/time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"/>
-
-    </RelativeLayout>
-
+        android:background="@color/text_font_color_white"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="确定"
+        android:textColor="@drawable/business_text_selector"
+        android:textSize="16sp" />
 </LinearLayout>
