--- a/MyApplicationSienke/app/src/main/res/layout/activity_sent_email.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_sent_email.xml
@@ -19,47 +19,55 @@
             android:src="@drawable/back_selector" />
 
         <TextView
-            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="审批流程"
+            android:text="已发送"
             android:textColor="@android:color/white"
             android:textSize="21sp" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/add"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/text_font_color_white">
+        android:background="@color/gray_thin"
+        android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="添加流程"
-            android:textSize="16sp" />
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:padding="10dp"
-            android:src="@mipmap/data_tj" />
+            <Button
+                android:id="@+id/checked"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/emaile_biaoji_selector"
+                android:text="全   选"
+                android:textSize="16sp" />
 
-    </RelativeLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="15dp"
-        android:background="@color/gray_thin" />
+            <Button
+                android:id="@+id/delete"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/emaile_biaoji_selector"
+                android:text="删   除"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+    </LinearLayout>
 
     <ListView
-        android:id="@+id/listview"
+        android:id="@+id/listview_email"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </ListView>
-
 </LinearLayout>
