--- a/MyApplicationSienke/app/src/main/res/layout/activity_meter_data_download.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_meter_data_download.xml
@@ -189,8 +189,8 @@
                 android:id="@+id/meter_area_lv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="5dp"
-                android:layout_marginRight="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp"
                 android:background="@drawable/listview_corner_bg_shape"
                 android:divider="@color/white_transparent"
                 android:dividerHeight="2dp"
