--- a/MyApplicationSienke/app/src/main/res/drawable/meter_area_user_layout_shape.xml
+++ b/MyApplicationSienke/app/src/main/res/drawable/meter_area_user_layout_shape.xml
@@ -2,4 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="8dp"/>
     <solid android:color="@android:color/white"/>
+    <stroke android:color="@color/theme_colors"
+        android:width="2dp"/>
 </shape>
