--- a/MyApplicationSienke/app/src/main/res/layout/activity_meter_user_listview.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_meter_user_listview.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/root_linearlayout"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
@@ -25,14 +26,14 @@
             android:src="@drawable/back_selector"/>
 
         <TextView
-            android:id="@+id/userlist_tv"
+            android:id="@+id/book_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="当前：票草"
+            android:padding="5dp"
             android:layout_centerInParent="true"
-            android:layout_gravity="center_horizontal"
-            android:text="用户列表"
             android:textColor="@android:color/white"
-            android:textSize="22sp"/>
+            android:textSize="18sp"/>
 
     </RelativeLayout>
 
@@ -68,6 +69,7 @@
             android:textColor="@color/text_blue"
             android:textSize="14sp"
             android:visibility="gone"/>
+
     </RelativeLayout>
 
     <LinearLayout
@@ -95,8 +97,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:background="@color/gray_thin"
+            android:orientation="horizontal"
             android:padding="3dp">
 
             <TextView
@@ -104,9 +106,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_marginRight="2dp"
                 android:layout_marginEnd="2dp"
+                android:layout_marginRight="2dp"
+                android:gravity="center"
                 android:text="1"
                 android:textColor="@color/text_blue"
                 android:textSize="16sp"/>
@@ -116,19 +118,19 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:textColor="@color/text_gray"
-                android:text="/"/>
+                android:text="/"
+                android:textColor="@color/text_gray"/>
 
             <TextView
                 android:id="@+id/total_page_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginLeft="2dp"
+                android:layout_marginStart="2dp"
                 android:gravity="center"
                 android:text="8"
                 android:textColor="@color/text_gray"
-                android:layout_marginLeft="2dp"
-                android:layout_marginStart="2dp"
                 android:textSize="14sp"/>
         </LinearLayout>
 
