--- a/MyApplicationSienke/app/src/main/res/values/colors.xml
+++ b/MyApplicationSienke/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="text_gray">#7d7d7d</color>
     <color name="text_black">#2b2b2b</color>
     <color name="text_blue">#0088ff</color>
+    <color name="simple_blue">#A7C0DC</color>
     <color name="transparent">#50ffffff</color>
     <color name="white_transparent">#00ffffff</color>
     <color name="transparent_blue">#804EA0DC</color>
