--- a/MyApplicationSienke/app/src/main/res/drawable/email_selector.xml
+++ b/MyApplicationSienke/app/src/main/res/drawable/email_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:drawable="@mipmap/email2"/>
-    <item android:state_pressed="false" android:drawable="@mipmap/email1"/>
+    <item android:state_checked="true" android:drawable="@mipmap/email2"/>
+    <item android:state_checkable="false" android:drawable="@mipmap/email1"/>
 
 
 </selector>
