--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_flow_dismission.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_flow_dismission.xml
@@ -29,6 +29,7 @@
     </RelativeLayout>
 
     <TextView
+        android:id="@+id/id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -142,7 +143,7 @@
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/send_name"
+            android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_margin="10dp"
@@ -193,37 +194,6 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:background="@color/text_font_color_white"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="15dp"
-                android:text="结束"
-                android:textColor="@color/text_black"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/end_date"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/normal_button_bg_selector"
-                android:drawableRight="@mipmap/down"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text="2017-3-13"
-                android:textColor="@color/text_black"
-                android:textSize="14sp" />
-
-        </LinearLayout>
     </LinearLayout>
 
     <TextView
