--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_flow_leave.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_flow_leave.xml
@@ -24,10 +24,11 @@
             android:layout_centerInParent="true"
             android:text="请假流程"
             android:textColor="@android:color/white"
-            android:textSize="21sp" />
+            android:textSize="21sp" />id
     </RelativeLayout>
 
     <TextView
+        android:id="@+id/id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -141,7 +142,7 @@
                 android:textSize="16sp" />
 
             <EditText
-                android:id="@+id/send_name"
+                android:id="@+id/content"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_margin="10dp"
