--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_flow_overtime.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_flow_overtime.xml
@@ -28,6 +28,7 @@
     </RelativeLayout>
 
     <TextView
+        android:id="@+id/id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -141,7 +142,7 @@
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/send_name"
+            android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_margin="10dp"
@@ -156,7 +157,7 @@
             android:layout_height="wrap_content"
             android:drawablePadding="15dp"
             android:padding="10dp"
-            android:text="请假时间："
+            android:text="加班时间："
             android:textColor="@color/text_black"
             android:textSize="16sp" />
 
