--- a/MyApplicationSienke/app/src/main/res/layout/activity_sent_email.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_sent_email.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_thin"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/root_linearlayout">
 
     <RelativeLayout
         android:layout_width="match_parent"
